modal footer issue

--- a/client/src/components/Tickets/TicketCreateForm.scss
+++ b/client/src/components/Tickets/TicketCreateForm.scss
@@ -61,3 +61,10 @@
     margin-left: 10px;
   }
 }
+
+.ticket-create-modal-body {
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  padding-bottom: 1em;
+}
