Handle loading/error of systems in Datafiles component

--- a/client/src/components/DataFiles/DataFiles.module.css
+++ b/client/src/components/DataFiles/DataFiles.module.css
@@ -49,3 +49,12 @@
   padding-left: 20px;
   display: flex;
 }
+
+/* Messaging */
+.error {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #9d85ef;
+  padding: 30px;
+}
