FP-862: Rename branding.html to header.html

--- a/server/portal/templates/base.html
+++ b/server/portal/templates/base.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <div class="content">
-      {% include 'includes/navigation.html' %}
+      {% include 'includes/header.html' %}
       {% include 'includes/messages.html' %}
       {% block breadcrumb %}{% endblock %}
       {% block content %}{% endblock %}
