--- a/client/src/components/Tickets/TicketCreateModal.scss
+++ b/client/src/components/Tickets/TicketCreateModal.scss
@@ -1,3 +1,7 @@
+.ticket-create-modal-body {
+  overflow: auto;
+  max-height: 60vh;
+}
 .ticket-create-modal {
   color: #484848;
   font-size: 0.75rem;
