Update style of error message

--- a/client/src/components/DataFiles/DataFiles.module.css
+++ b/client/src/components/DataFiles/DataFiles.module.css
@@ -50,11 +50,8 @@
   display: flex;
 }
 
-/* Messaging */
+/* Error message */
 .error {
-  display: flex;
   justify-content: center;
   align-items: center;
-  color: #9d85ef;
-  padding: 30px;
 }
