Limit description height

--- a/client/src/components/DataFiles/DataFilesProjectFileListing/DataFilesProjectFileListing.module.scss
+++ b/client/src/components/DataFiles/DataFilesProjectFileListing/DataFilesProjectFileListing.module.scss
@@ -17,6 +17,9 @@
   padding-bottom: 1em;
   color: #707070;
   font-size: 12px;
+  max-height: 10%;
+  overflow-y: scroll;
+  margin-bottom: 1em;
 }
 
 .controls {
