--- a/client/src/components/_common/ReadMore/ReadMore.module.scss
+++ b/client/src/components/_common/ReadMore/ReadMore.module.scss
@@ -1,6 +1,12 @@
 @import '../../../styles/tools/mixins.scss';
 
-.text-container {
+.clamped {
   overflow: hidden;
-  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+}
+
+.expanded {
+  overflow: visible;
 }
