Task/FP-866 handle potential delay in systems list retrieval (#330)
* Refactor datafiles systems and definitions state

So that both systems and definitions have there own error/loading state

* Handle loading/error of systems in Datafiles component

* Fix allocation check in AppForm to wait for defaultHost

* Simplify boolean calculation

* Refactor state names

* Update style of error message

* Use SectionMessage for error message

--- a/client/src/components/DataFiles/DataFiles.module.css
+++ b/client/src/components/DataFiles/DataFiles.module.css
@@ -49,3 +49,10 @@
   padding-left: 20px;
   display: flex;
 }
+
+/* Error message */
+.error {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
