--- a/client/src/components/DataFiles/DataFilesProjectFileListing/DataFilesProjectFileListing.module.scss
+++ b/client/src/components/DataFiles/DataFilesProjectFileListing/DataFilesProjectFileListing.module.scss
@@ -15,6 +15,11 @@
 .description {
   padding-left: 1em;
   padding-bottom: 1em;
+  color: #707070;
+  font-size: 12px;
+  max-height: 10%;
+  overflow-y: scroll;
+  margin-bottom: 1em;
 }
 
 .controls {
