--- a/client/src/components/Tickets/TicketCreateModal.scss
+++ b/client/src/components/Tickets/TicketCreateModal.scss
@@ -2,6 +2,10 @@
   overflow: auto;
   max-height: 75vh;
 }
+.ticket-create-modal-body {
+  overflow: auto;
+  max-height: 60vh;
+}
 .ticket-create-modal {
   color: #484848;
   font-size: 0.75rem;
