Refactor to use css module

--- a/client/src/components/DataFiles/DataFilesModals/DataFilesPreviewModal.module.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesPreviewModal.module.scss
@@ -15,3 +15,9 @@
   align-items: center;
   height: 100%;
 }
+
+.loading-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
