--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -21,6 +21,7 @@
 /* COMPONENTS */
 /* NOTE: For the most part, allow React components to explicitely import as needed */
 @import url('./components/bootstrap.form.css');
+@import url('./components/bootstrap.modal.css');
 
 /* TRUMPS */
 /* NOTE: For the most part, allow React components to explicitely import as needed */
