FP-884: Restore modal footer border

--- a/client/src/styles/components/bootstrap.modal.css
+++ b/client/src/styles/components/bootstrap.modal.css
@@ -13,8 +13,17 @@ Styleguide Components.Bootstrap.Modal
 .modal-header,
 .modal-body,
 .modal-footer {
-  border: none;
   border-radius: 0;
+}
+.modal-content,
+.modal-header,
+.modal-body {
+  border: none;
+}
+.modal-footer {
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
 }
 
 .modal-header {
