FP-884: Add comment about FP-344 having CSS module

--- a/client/src/styles/components/bootstrap.modal.css
+++ b/client/src/styles/components/bootstrap.modal.css
@@ -1,4 +1,5 @@
 /* TODO: Migrate any other should-be-global modal styles to here */
+/* FP-344: Consider a Modal component and a CSS module */
 /*
 Modal (Bootstrap)
 
