FP-837 add unit tests for file preview and determine file size in back end (#300)
* Remove length from preview request

* Clean up existing tests

* Refactor preview to check file size on back-end

Add unit tests for route

* Fix commas

* Add frontend test for modal

* Fix size and layouts of elements

* Stop renaming state

* Fix check for preview spinner

* Simplify reseting of isFrameLoading

* Fix linting issue

* Remove empty div

* Refactor to use css module

* Fix linting error

* Fix loading spinner

Co-authored-by: Sal Tijerina <r.sal.tijerina@gmail.com>

--- a/client/src/components/DataFiles/DataFilesModals/DataFilesPreviewModal.module.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesPreviewModal.module.scss
@@ -1,6 +1,18 @@
+.root {
+  min-height: 30vh;
+}
+
 .text-preview{
   max-height: 75vh;
   overflow-x: auto;
   white-space: pre-wrap;
   word-wrap: break-word;
 }
+
+.error {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
