--- a/client/src/components/Workbench/Workbench.scss
+++ b/client/src/components/Workbench/Workbench.scss
@@ -8,6 +8,12 @@
     /* As a flex item */
     flex-grow: 1;
 
+    /* Allow wide content to shrink */
+    /* SEE: https://github.com/philipwalton/flexbugs#flexbug-1 */
+    min-width: 0;
+    /* Allow narrow content to stretch */
+    /* FAQ: No need for `width: 100%`; it is implicit behavior */
+
     /* As a flex container */
     display: flex;
     flex-direction: column;
@@ -15,6 +21,10 @@
 /* FAQ: If the workbench content has only a single child,
         then it should be the same height as the app root */
 .workbench-content > :only-child {
+    /* Allow tall content to shrink */
+    /* SEE: https://github.com/philipwalton/flexbugs#flexbug-1 */
+    min-height: 0;
+    /* Allow short content to stretch */
     height: 100%;
 }
 
@@ -71,13 +81,6 @@
 .workbench-content .badge-danger {
   background-color: #EB6E6E;
   color: white;
-}
-
-/* Overrides Bootstrap `.row`, because we need to
-   "undo" two horizontal instances of Bootstrap `.row`'s. */
-.workbench-content .row {
-  margin-right: -30px;
-  margin-left: -30px;
 }
 
 /* Align content tables to the left by undoing some Bootstrap */
