--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,15 @@ body {
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* FAQ: Use variable to allow min-height change w/out overwriting styles */
+  /* WARNING: Must NOT use keyword; must use unit; or use in `calc` will fail */
+  /* stylelint-disable length-zero-no-unit */
+  --min-height: 0px;
+  --min-width: 0px;
+  /* stylelint-enable length-zero-no-unit */
+  min-height: var(--min-height);
+  min-width: var(--min-width);
 }
 
 /*
@@ -42,6 +51,7 @@ code {
         (would be influenced by force stretch), so force stretch outward. */
 html,
 body {
+  /* As a stretched item */
   position: absolute;
   left: 0;
   right: 0;
@@ -63,18 +73,39 @@ body {
 /* FAQ: The `.content` and `#react-root` boxes are only as tall as their content
         (which may be shorter than window height), can have siblings elements
         (would be influenced by force stretch), so gently stretch outward. */
-body,
-body > .content,
-#react-root {
+body {
+  /* As a flex container */
   display: flex;
   flex-direction: column;
 }
-body > .content,
-#react-root,
-/* FAQ: If the app root element has only a single child,
-        then it should be the same height as the app root */
-#react-root > :only-child {
+body > .content {
+  /* As a flex item */
   flex-grow: 1;
+
+  /* As a flex container */
+  display: flex;
+  flex-direction: column;
+}
+#react-root {
+  /* As a flex item */
+  flex-grow: 1;
+
+  /* As a stretched item container */
+  position: relative;
+}
+#react-root > :only-child {
+  /* As a stretched item */
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+/* FP-546: If this style has become unnecessary, then remove it */
+.btn-link,
+.btn-link:hover {
+  color: var(--global-color-accent--normal);
 }
 
 /* FP-546: If this style has become unnecessary, then remove it */
