FP-385: Improve UI Pattern text formatting

--- a/client/src/components/UIPatterns/UIPatternsSection/UIPatternsSection.module.css
+++ b/client/src/components/UIPatterns/UIPatternsSection/UIPatternsSection.module.css
@@ -1,3 +1,11 @@
+.term-details {
+  font-weight: normal;
+  font-style: italic;
+}
+.term-details dt {
+  font-family: var(--global-font-family--mono);
+}
+
 .is-resizable {
   resize: both;
   overflow: scroll;
