FP-385: WIP: Show SectionTable Support

--- a/client/src/components/UIPatterns/UIPatternsSection/UIPatternsSection.module.css
+++ b/client/src/components/UIPatterns/UIPatternsSection/UIPatternsSection.module.css
@@ -6,6 +6,10 @@
   font-family: var(--global-font-family--mono);
 }
 
+.table {
+  margin-bottom: 1em;
+}
+
 .is-resizable {
   resize: both;
   overflow: scroll;
@@ -24,4 +28,8 @@
   --max-lines: 2;
 
   height: calc(var(--line-height) * var(--max-lines));
+}
+
+.has-infinite-scroll-table {
+  height: 110px;
 }
