--- a/client/src/components/Onboarding/OnboardingAdmin.module.scss
+++ b/client/src/components/Onboarding/OnboardingAdmin.module.scss
@@ -77,10 +77,11 @@ tbody {
   padding-left: 12px;
 }
 
+.approve-container {
+  display: flex;
+}
+
 .approve {
-  color: #707070;
-  background-color: #F4F4F4;
-  border: 1px solid #AFAFAF;
   font-size: 12px;
   height: 19px;
   border-radius: 0;
