FP-385: Appease StyleLint

--- a/client/src/styles/elements/sectioning.css
+++ b/client/src/styles/elements/sectioning.css
@@ -1,7 +1,11 @@
 /* ELEMENTS: (Content) Sectioning Elements */
 /* SEE: https://developer.mozilla.org/en-US/docs/Web/HTML/Element#Content_sectioning */
 
-h1, h2, h4, h5, h6 {
+h1,
+h2,
+h4,
+h5,
+h6 {
     font-weight: normal;
 }
 
