--- a/client/src/components/DataFiles/DataFilesProjectsList/DataFilesProjectsList.module.scss
+++ b/client/src/components/DataFiles/DataFilesProjectsList/DataFilesProjectsList.module.scss
@@ -1,5 +1,19 @@
 .root {
+  /* As a flex child */
   flex-grow: 1;
+
+  /* NOTE: Mimicked on: History, Allocation, DataFiles, DataFilesProjectsList, DataFilesProjectFileListing */
+  padding-top: 1.75rem; /* ~28px (22.5px * design * 1.2 design-to-app ratio) */
+  padding-left: 1.5em; /* ~24px (20px * design * 1.2 design-to-app ratio) */
+}
+
+/* NOTE: Mimicked on: DataFiles, DataFilesProjectsList, DataFilesProjectFileListing */
+.root-placeholder {
+  flex-grow: 1;
+
   display: flex;
+  align-items: center;
+  justify-content: center;
+  /* XXX: Jake adds in PR #316, but I add `center` stuff in PR #236. Solves same problem different way? Untested. DO NOT MERGE! RESOLVE FIRST! */
   flex-direction: column;
 }
