--- a/client/src/components/DataFiles/DataFilesProjectFileListing/DataFilesProjectFileListing.module.scss
+++ b/client/src/components/DataFiles/DataFilesProjectFileListing/DataFilesProjectFileListing.module.scss
@@ -1,25 +1,30 @@
 .root {
+  /* As a flex child */
   flex-grow: 1;
-  display: flex;
-  flex-direction: column;
+
+  /* NOTE: Mimicked on: History, Allocation, DataFiles, DataFilesProjectsList, DataFilesProjectFileListing */
+  padding-top: 1.75rem; /* ~28px (22.5px * design * 1.2 design-to-app ratio) */
+  padding-left: 1.5em; /* ~24px (20px * design * 1.2 design-to-app ratio) */
 }
 
-.title-bar {
-  border-bottom: 1px solid black;
-  padding-left: 1em;
-  margin-bottom: 0.5em;
+/* NOTE: Mimicked on: DataFiles, DataFilesProjectsList, DataFilesProjectFileListing */
+.root-placeholder {
+  flex-grow: 1;
+
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
 }
 
 .description {
-  padding-left: 1em;
+  padding-top: 0.5em;
   padding-bottom: 1em;
   color: #707070;
   font-size: 12px;
   max-height: 10%;
   overflow-y: scroll;
-  margin-bottom: 1em;
+
+  border-top: var(--global-border-width--normal) solid var(--global-color-primary--dark);
 }
 
 .controls {
@@ -28,9 +33,7 @@
 }
 
 .edit {
-  padding-top: 0;
-  padding-bottom: 0;
-  padding-right: 0;
+  padding: 0;
 }
 
 .separator {
