--- a/client/src/components/DataFiles/DataFilesTable/DataFilesTable.scss
+++ b/client/src/components/DataFiles/DataFilesTable/DataFilesTable.scss
@@ -33,7 +33,10 @@
   padding-right: 15px;
 }
 
+/* NOTE: Mimicked on: DataFiles, DataFilesProjectsList, DataFilesProjectFileListing */
 .listing-placeholder {
+  flex-grow: 1;
+
   display: flex;
   align-items: center;
   justify-content: center;
