--- a/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
+++ b/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
@@ -1,14 +1,18 @@
 .InfiniteScrollTable {
   --cell-horizontal-padding: 0.35em; /* horizontal cell padding for inter-column buffer */
-  /* TODO: After, FP-103, use `composes:` not `@extend` */
-  @extend .o-fixed-header-table;
+
+  /* Force `width: 100%` to have effect in all scenarios */
+  /* SEE: https://stackoverflow.com/a/6601257 */
+  table-layout: fixed;
 
   position: relative;
-  align-items: stretch;
   width: 100%;
   overflow: scroll;
   max-height: inherit; /* inherit max-height from parent wrapper */
-  font-size: 0.78em;
+  font-size: 0.75rem; /* 12px (10px design * 1.2 design-to-app ratio) */
+
+  border-collapse: separate;
+  border-spacing: 0;
 
   thead {
     user-select: none;
@@ -24,12 +28,14 @@
     th {
       padding-left: var(--cell-horizontal-padding);
       padding-right: var(--cell-horizontal-padding);
+
+      border-bottom: 1px solid #707070;
+      background-color: var(--global-color-background--app);
     }
   }
 
   tbody {
-    overflow-y: scroll;
-    tr:not([class=-status]) {
+    tr:not([class=-status]) td {
       border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     }
 
@@ -40,102 +46,35 @@
       background-color: rgba(0, 0, 0, 0.05);
     }
 
+    /* !!!: Temporary lint disabling to make simpler PR diff */
+    /* stylelint-disable no-descending-specificity */
     td {
-      display: flex;
-      align-content: center;
+      vertical-align: middle;
       padding: 0.7em var(--cell-horizontal-padding);
       margin: auto 0; /* vertically center span content */
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
-
-      /* Contain children to cell size and add ellipsis to overflow by default */
-      & > :only-child {
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
     }
 
     .-status {
-      width: 100%;
-      display: block;
       box-sizing: border-box;
       td {
-        /* FAQ: Because widths can be defined by component that uses this one,
-                and those width might not use a class, we must overwrite it */
-        width: 100% !important /* override allowed `td:nth-child(N)` width */;
-
         padding-top: 0.5em;
         padding-bottom: 0.5em;
-        text-align: justify;
-        display: block;
-        box-sizing: border-box;
-        clear: both;
       }
     }
-    .-status__message {
+    /* !!!: Temporary duplicate selector to make simpler PR diff */
+    .-status td {
       text-align: center;
     }
+    /* stylelint-enable no-descending-specificity */
   }
-  /* Allow `.o-fixed-header-table td` width to apply to common inline elements */
-  /* Allow `.u-ellipsis` usage to have effect on common inline elements */
+  /* Allow cell width to propogate to common child elements */
   & td > a,
   & td > span {
-    display: inline-block;
-
     /* Stretch cell content to fit available space */
-    /* WARNING: Unexpected behavior with child text nodes `<td>…<a>…</a>…</td>` */
+    /* NOTE: This is intentionally ineffectual on inline elements */
     width: 100%;
   }
-}
-
-
-
-
-
-/*
-Fixed Header Table
-
-A table with a header that does not move, and a body that scrolls.
-
-> __Warning__: This forces table to become a fixed layout, and requires manually calculated column widths
-
-Markup:
-<table class="fixed-header-table">
-    <thead>
-      <tr>
-        <th>A</th>
-        <th>B</th>
-        <th>C</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>A</td>
-        <td>B</td>
-        <td>C</td>
-      </tr>
-    </thead>
-</table>
-
-Styleguide Objects.FixedHeaderTable
-*/
-.o-fixed-header-table {
-  table-layout: fixed;
-  border-collapse: collapse;
-}
-
-/* Make table rows act like table rows, even though `tbody` has become a block */
-/* FP-130: Migrates this to another stylesheet *//* stylelint-disable no-descending-specificity */
-.o-fixed-header-table tr {
-  display: flex;
-  flex-direction: row;
-}
-/* stylelint-enable no-descending-specificity */
-/* Allow table body to scroll (which also pins the table head in place) */
-.o-fixed-header-table tbody {
-  display: block;
-  overflow: auto;
-  width: 100%;
-  max-height: inherit; /* inherit max-height from InfiniteScrollTable */
 }
