--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -19,6 +19,7 @@
 
 /* OBJECTS */
 /* NOTE: For the most part, allow React components to explicitely import as needed */
+@import url('./objects/o-fixed-header-table.css');
 @import url('./objects/o-flex-item-table-wrap.css');
 
 /* COMPONENTS */
