--- a/client/src/components/_common/Paginator/Paginator.module.scss
+++ b/client/src/components/_common/Paginator/Paginator.module.scss
@@ -1,23 +1,29 @@
-.page {
-  background-color: var(--global-color-primary--xx-light) !important;
-  border-radius: 0;
-  font-size: 12px;
-  padding-left: 6px;
-  padding-right: 6px;
-  width: 32px;
-  margin-left: 4px;
-  margin-right: 4px;
+.root {
+  .endcap > * {
+    margin-right: 0.25em;
+  }
+
+  .endcap {
+    padding-left: 12px;
+    font-size: 12px;
+  }
 }
 
-.current {
-  background-color: var(--global-color-accent--light) !important;
-}
-
-.endcap {
-  padding-left: 12px !important;
-  font-size: 12px;
-}
-
-.endcap > * {
-  margin-right: 0.25em;
+.page-root {
+  display: inline-block;
+  .page {
+    border-radius: 0;
+    font-size: 12px;
+    padding-left: 6px;
+    padding-right: 6px;
+    width: 32px;
+    margin-left: 4px;
+    margin-right: 4px;
+  }
+  .page:not(.current) {
+    background-color: var(--global-color-primary--xx-light);
+  }
+  .page.current {
+    background-color: var(--global-color-accent--light);
+  }
 }
