--- a/client/src/components/_common/SectionTable/SectionTable.module.css
+++ b/client/src/components/_common/SectionTable/SectionTable.module.css
@@ -8,13 +8,7 @@
 
 /* Elements */
 
-.table-wrap {
-  composes: o-flex-item-table-wrap from '../../../styles/objects/o-flex-item-table-wrap.css';
-}
-
-/* Elements: Sub-Components */
-
-/* CAVEAT: These are only applied to automatically-built sub-components */
+/* CAVEAT: This is only applied to automatically-built sub-components */
 .header {
   flex-shrink: 0;
 }
@@ -28,14 +22,14 @@
 }
 
 /* NOTE: Similar on: SectionContent, SectionTable */
-.should-scroll .table-wrap {
+.should-scroll :global(.o-flex-item-table-wrap) {
   /* We want to permit vertical scrolling, without forcing it */
   /* FAQ: Did not set `overflow: auto`, because that would certainly hide negative-margined sidebar links */
   /* CAVEAT: Setting `overflow-y` still hides the negative-margined sidebar links because `overflow-x: visible` (default) is re-intepreted as `auto` */
   /* SEE: https://stackoverflow.com/a/6433475/11817077 */
   overflow-y: auto;
 }
-.root:not(.should-scroll) .table-wrap {
+.root:not(.should-scroll) :global(.o-flex-item-table-wrap) {
   /* We want to disable vertical and horizontal scrolling */
   overflow: hidden;
 }
