FP-385: Use Section components for PublicData

--- a/client/src/components/DataFiles/DataFiles.module.css
+++ b/client/src/components/DataFiles/DataFiles.module.css
@@ -7,7 +7,7 @@
   border-right: var(--global-border--normal);
 }
 .content {
-  /* NOTE: Mimicked on: History, Allocation, DataFiles, DataFilesProjectsList, DataFilesProjectFileListing */
+  /* WARNING: Mimicked on: History, Allocation, DataFiles, DataFilesProjectsList, DataFilesProjectFileListing, PublicData */
   padding-top: 1.75rem; /* ~28px (22.5px * design * 1.2 design-to-app ratio) */
   padding-left: 1.5em; /* ~24px (20px * design * 1.2 design-to-app ratio) */
 
