--- a/client/src/components/History/History.module.scss
+++ b/client/src/components/History/History.module.scss
@@ -11,7 +11,7 @@
 /* Elements */
 
 .content {
-    /* NOTE: Mimicked on: History, Allocation, DataFiles, DataFilesProjectsList, DataFilesProjectFileListing */
+    /* WARNING: Mimicked on: History, Allocation, DataFiles, DataFilesProjectsList, DataFilesProjectFileListing, PublicData */
     padding-top: 1.75rem; /* ~28px (22.5px * design * 1.2 design-to-app ratio) */
     padding-left: 1.5em; /* ~24px (20px * design * 1.2 design-to-app ratio) */
 
