--- a/client/src/components/DataFiles/DataFiles.global.css
+++ b/client/src/components/DataFiles/DataFiles.global.css
@@ -3,5 +3,6 @@
 /* SEE: index.css */
 body.has-loaded-datafiles {
   /* HACK: Should instead (ask Design) reduce button width on narrow screen */
-  --min-width: 1000px; /* approx. Data Files sans element collision */
+  --min-width: 925px; /* approx. Data Files table before table header cut off */
+  /* --min-width: 1152px; /* approx. Data Files table no horz. scrollbar */
 }
