--- a/client/src/components/DataFiles/DataFilesProjectFileListing/DataFilesProjectFileListing.module.scss
+++ b/client/src/components/DataFiles/DataFilesProjectFileListing/DataFilesProjectFileListing.module.scss
@@ -18,7 +18,7 @@
 
 .description {
   padding-top: 0.5em;
-  padding-bottom: 1em;
+  margin-bottom: 1em; /* padding would only be effectual within scrollarea */
   color: #707070;
   font-size: 12px;
   max-height: 10%;
