--- a/client/src/components/Onboarding/OnboardingAdmin.module.scss
+++ b/client/src/components/Onboarding/OnboardingAdmin.module.scss
@@ -9,7 +9,6 @@
   padding: 20px 40px 20px 20px;
   position: absolute;
   max-height: 100%;
-  justify-content: space-between;
   width: 100%;
   height: 100%;
 }
@@ -145,4 +144,5 @@ tbody {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 90%;
 }
