FP-385: Remove use of Bootstrap global class

--- a/client/src/components/UIPatterns/UIPatternsSection/UIPatternsSection.module.css
+++ b/client/src/components/UIPatterns/UIPatternsSection/UIPatternsSection.module.css
@@ -9,6 +9,7 @@
 
   font-weight: normal;
   font-style: italic;
+  font-size: 80%; /* Mimic Bootstrap `small, .small` */
 }
 .term-details dt {
   font-family: var(--global-font-family--mono);
