--- a/client/src/components/_common/SectionContent/SectionContent.module.css
+++ b/client/src/components/_common/SectionContent/SectionContent.module.css
@@ -20,9 +20,9 @@
 }
 
 /* Color-code panels to easily track movement of multiple panels */
-.should-debug::before          { background-color: tomato; }
-.should-debug > *:nth-child(1) { background-color: orchid; }
-.should-debug > *:nth-child(2) { background-color: dodgerblue; }
-.should-debug > *:nth-child(3) { background-color: yellow; }
-.should-debug > *:nth-child(4) { background-color: mediumseagreen; }
-.should-debug::after           { background-color: gray; }
+.should-debug-layout::before          { background-color: tomato; }
+.should-debug-layout > *:nth-child(1) { background-color: orchid; }
+.should-debug-layout > *:nth-child(2) { background-color: dodgerblue; }
+.should-debug-layout > *:nth-child(3) { background-color: yellow; }
+.should-debug-layout > *:nth-child(4) { background-color: mediumseagreen; }
+.should-debug-layout::after           { background-color: gray; }
