--- a/client/src/components/SiteSearch/SiteSearchListing/SiteSearchListing.css
+++ b/client/src/components/SiteSearch/SiteSearchListing/SiteSearchListing.css
@@ -1,7 +1,7 @@
-.td-width-100 {
+.site-search__full-width-result{
     width: 100%;
 }
 
-.td-no-overflow {
+.site-search__no-overflow {
     overflow: visible !important;
 }
