--- a/client/src/components/Onboarding/OnboardingAdmin.module.scss
+++ b/client/src/components/Onboarding/OnboardingAdmin.module.scss
@@ -18,6 +18,7 @@
     justify-content: space-between;
     align-items: baseline;
     border-bottom: 1px solid #707070;
+    padding-bottom: 8px;
     margin-bottom: 1.5em;
 }
 
