--- a/client/src/components/SiteSearch/SiteSearchListing/SiteSearchListing.module.scss
+++ b/client/src/components/SiteSearch/SiteSearchListing/SiteSearchListing.module.scss
@@ -1,18 +1,34 @@
 .sitesearch-cms-item {
-  padding-bottom: 20px;
+  padding-bottom: 15px;
+  padding-left: var(--space--listing-horz);
+
+  font-size: 12px; /* 10px design * 1.2 design-to-app ratio */
 }
 
-.sitesearch-cms-item .wb-link {
+.sitesearch-cms-item a {
+  font-weight: bold;
+  /* NOTE: Would get this from `.wb-link`, but its styles rely on `.workbench` container, which is (correctly) not part of site search */
   color: #9d85ef;
 }
 
 .header {
   border-bottom: 1px solid #707070;
-  padding-bottom: 15px; /* 12.5px design * 1.2 design-to-app ratio */
+  padding-left: var(--space--listing-horz);
+  padding-bottom: var(--space--listing-vert);
   font-size: 14px; /* 12px design * 1.2 design-to-app ratio */
+}
+.for-cms .header {
+  margin-bottom: 30px; /* 24.5 design * 1.2 design-to-app ratio */
+}
+.for-public .header,
+.for-community .header {
+  margin-bottom: 0; /* Overwrite Bootstrap */
 }
 
 .container {
+  --space--listing-horz: 11px; /* 9.5px design * 1.2 design-to-app ratio */
+  --space--listing-vert: 15px; /* 12.5px design * 1.2 design-to-app ratio */
+
   // FAQ: Extra padding is added to bottom only for this section
   padding: 20px 40px 40px 25px;
   display: flex;
@@ -33,4 +49,6 @@
 .paginator-container {
   display: flex;
   justify-content: center;
+
+  margin-top: var(--space--listing-vert);
 }
