FP-895: UI Tweak: Make error more match design
Changes:
- Change message type from warning to info
- Create a `hasNoResults` variable
- Add an `is-empty` class
- Remove spacing below header if no results

Concerns:
- Design does not use <InlineMessage> "info" icon.
- <InlineMessage> style "info" has an icon.

https://tacc-team.slack.com/archives/CQUA4D5KJ/p1615505431070500

--- a/client/src/components/SiteSearch/SiteSearchListing/SiteSearchListing.module.scss
+++ b/client/src/components/SiteSearch/SiteSearchListing/SiteSearchListing.module.scss
@@ -21,7 +21,8 @@
   margin-bottom: 30px; /* 24.5 design * 1.2 design-to-app ratio */
 }
 .for-public .header,
-.for-community .header {
+.for-community .header,
+.is-empty .header {
   margin-bottom: 0; /* Overwrite Bootstrap */
 }
 
@@ -40,10 +41,7 @@
 }
 
 .placeholder {
-  flex-grow: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin: 25px var(--space--listing-horz);
 }
 
 .paginator-container {
