Task/fp 385 section comp welcome msg  patterns (#347)
* FP-385: New Section Components, Styles, Patterns

* FP-385: Add WelcomeMessage for UIPatterns

* FP-385: Fix resize/stretch/scroll demo

* FP-385: Fix modal support and adhere to eslint

* FP-385: Improve UI Pattern text formatting

* FP-385: Fix innocuous but confusing typo

* FP-385: WIP: Show SectionTable Support

* FP-385: UI Patterns: Support InfiniteScrollTable

* FP-385: UI Patterns: Fix formatting / ESLint

* FP-385: Quick: Fix Sidebar wrap

* FP-385: Drop o-fixed-header-table for later branch

* FP-385: Minor: Use <SectionMessage> not Reactstrap

* FP-385: Restore Workbench's <WelcomeMessages>

Only remove this after <Section> component is used for all sections.

Expect this in task/FP-385-section-comp-welcome-msg--sections or later.

* FP-385: Cleanup <UIPatternsSection> styles

* FP-385: Restore Workbench's negative row margins

Only remove this after <Section> component is used for all sections.

Expect this in task/FP-385-section-comp-welcome-msg--sections or later.

* FP-385: Noop: Fix typos

* FP-385: Noop: Add missing comments, future sidebar

* FP-385: Support custom welcome message text

* FP-385: Tests: Fix false negative tests

* FP-385: Improve desc. of welcome(Message)Text

* FP-385: Noop: Better commenting

* FP-385: Minor tweaks

* FP-385: Add a note to clarify one-off style

* FP-385: Tweak content layouts and prop order

* FP-385: ESLint & Comments

* FP-385: Comments & New Lines

* FP-385: Remove superfluous new global style

* FP-385: Appease StyleLint

* FP-385: Fix: <SectionTable contentShouldScroll>

- Allow contentShouldScroll in <SectionTable> with manualContent
- Replace module class `table-wrap` with global class `o-…-table-wrap`
- Support use of `:global()` in CSS modules*

* Only because a use case has finally been found.

* FP-385: Document <Section bodyClassName="…">

* FP-385: Rename welcomeMessage 

--- a/client/src/components/UIPatterns/UIPatterns.module.scss
+++ b/client/src/components/UIPatterns/UIPatterns.module.scss
@@ -1,28 +1,19 @@
-/* This is a version of the Dashboard stylesheet with these changes:
-    - CSS Modules
-    - minimal
-    - no flexbox
-*/
+/* Block */
 
 .container {
-  // FAQ: Extra padding is added to bottom only for this section
-  padding: 20px 40px 40px 25px;
+  /* FAQ: Only defined so "Elements: Tags" can be styled */
 }
 
-.header {
-  border-bottom: 1px solid #707070;
-}
 
-.header h5 {
-  font-weight: 400;
-}
+/* Elements */
 
-/* FAQ: Ancestor of `.dashboard-items` */
-/* RFC: Class name `.dashboard-item` (to coincide with `.dashboard-items`) */
-.grid-item {
+.list-item {
+  font-size: 14px;
   margin-top: 20px;
 }
 
-.items {
-  font-size: 14px;
+/* Elements: Tags */
+
+.container dt > small {
+  display: block;
 }
